--- a/index.html
+++ b/index.html
@@ -45,59 +45,68 @@
     </header>
     <main>
       <article class="featured">
-        <header>The Bright Future of Web 3.0?</header>
+        <header><a href="#">The Bright Future of Web 3.0?</a></header>
         <p>
           We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of
           the people.
           But is it really fulfilling its promise?
         </p>
         <picture>
-          <img src="assets/images/image-web-3-desktop.jpg" alt="modern version of the 'ketnetkroket'">
+          <img src="assets/images/image-web-3-mobile.jpg" alt="modern version of the 'ketnetkroket'">
         </picture>
         <a href="#" class="button">Read more</a>
       </article>
       <section class="new" id="new">
         <header>New</header>
-        <article>
-          <header>Hydrogen VS Electric Cars</header>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </article>
-        <hr>
-        <article>
-          <header>The Downsides of AI Artistry</header>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
-        </article>
-        <hr>
-        <article>
-          <header>Is VC Funding Drying Up?</header>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </article>
+        <ul>
+          <li>
+            <article>
+              <header><a href="#">Hydrogen VS Electric Cars</a></header>
+              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <header><a href="#">The Downsides of AI Artistry</a></header>
+              <p>What are the possible adverse effects of on-demand AI image generation?</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <header><a href="#">Is VC Funding Drying Up?</a></header>
+              <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+            </article>
+          </li>
+        </ul>
       </section>
       <section class="popular" id="popular">
           <header class="sr-only">Popular</header>
-          <ul>
-            <li>
+          <ol role="list">
+            <li role="listitem">
               <article>
-                <header>Reviving Retro PCs</header>
+                <span aria-hidden="true" class="featured-article"></span>
+                <header><a href="#">Reviving Retro PCs</a></header>
                 <p>What happens when old PCs are given modern upgrades?</p>
                 <img src="assets/images/image-retro-pcs.jpg" alt="old pcs in an office">
               </article>
             </li>
-            <li>
+            <li role="listitem">
               <article>
-                <header>Top 10 Laptops of 2022</header>
+                <span aria-hidden="true" class="featured-article"></span>
+                <header><a href="#">Top 10 Laptops of 2022</a></header>
                 <p>Our best picks for various needs and budgets.</p>
                 <img src="assets/images/image-top-laptops.jpg" alt="laptop keyboard with red lights">
               </article>
             </li>
-            <li>
+            <li role="listitem">
               <article>
-                <header>The Growth of Gaming</header>
+                <span aria-hidden="true" class="featured-article"></span>
+                <header><a href="#">The Growth of Gaming</a></header>
                 <p>How the pandemic has sparked fresh opportunities.</p>
                 <img src="assets/images/image-gaming-growth.jpg" alt="hand throwing controller up in the air">
               </article>
             </li>
-          </ul>
+          </ol>
       </section>
     </main>
     <div class="attribution">
