static mobile view finished

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <ol role="list">
             <li role="listitem">
               <article>
-                <span aria-hidden="true" class="featured-article"></span>
+                <span aria-hidden="true" class="featured-article">01</span>
                 <header><a href="#">Reviving Retro PCs</a></header>
                 <p>What happens when old PCs are given modern upgrades?</p>
                 <img src="assets/images/image-retro-pcs.jpg" alt="old pcs in an office">
@@ -92,7 +92,7 @@
             </li>
             <li role="listitem">
               <article>
-                <span aria-hidden="true" class="featured-article"></span>
+                <span aria-hidden="true" class="featured-article">02</span>
                 <header><a href="#">Top 10 Laptops of 2022</a></header>
                 <p>Our best picks for various needs and budgets.</p>
                 <img src="assets/images/image-top-laptops.jpg" alt="laptop keyboard with red lights">
@@ -100,7 +100,7 @@
             </li>
             <li role="listitem">
               <article>
-                <span aria-hidden="true" class="featured-article"></span>
+                <span aria-hidden="true" class="featured-article">03</span>
                 <header><a href="#">The Growth of Gaming</a></header>
                 <p>How the pandemic has sparked fresh opportunities.</p>
                 <img src="assets/images/image-gaming-growth.jpg" alt="hand throwing controller up in the air">
