fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -25,78 +25,94 @@
 </head>
 
 <body>
-  <div class="overlay hidden" aria-hidden="true"></div>
-  <div class="wrapper">
-    <header>
-      <h1 class="sr-only">News website</h1>
-      <img src="assets/images/logo.svg" alt="">
-      <button type="button" class="menu-btn" aria-label="Toggle Menu" aria-expanded="false" id="js-menu-button">
-        <img src="assets/images/icon-menu.svg" alt="" class="menu-open">
-      </button>
-      <nav role="navigation">
-        <a href="#main">Home</a>
-        <a href="#new">New</a>
-        <a href="#popular">Popular</a>
-        <a href="#">Trending</a>
-        <a href="#">Categories</a>
-        <button type="button" class="menu-btn" aria-label="Close" id="js-close-menu">
-          <img src="assets/images/icon-menu-close.svg" alt="" class="menu-close">
-        </button>
-      </nav>
-    </header>
-    <main>
-      <article class="featured">
-        <header><a href="#">The Bright Future of Web 3.0?</a></header>
-        <p>
-          We dive into the next evolution of the web that claims to put the power of the platforms back into the hands
-          of
-          the people.
-          But is it really fulfilling its promise?
-        </p>
-        <picture>
-          <source media="(min-width: 40rem)" srcset="assets/images/image-web-3-desktop.jpg">
-          <source media="(max-width: 40rem)" srcset="assets/images/image-web-3-mobile.jpg"> <img src="assets/images/image-web-3-mobile.jpg" alt="modern version of the 'ketnetkroket'">
-        </picture>
-        <a href="#" class="button">Read more</a>
-      </article>
-      <section class="new" id="new">
-        <header>New</header>
-        <article>
-          <header><a href="#">Hydrogen VS Electric Cars</a></header>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </article>
-        <article>
-          <header><a href="#">The Downsides of AI Artistry</a></header>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
-        </article>
-        <article>
-          <header><a href="#">Is VC Funding Drying Up?</a></header>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </article>
-      </section>
-      <section class="popular" id="popular">
-        <header class="sr-only">Popular</header>
-        <article>
-          <span aria-hidden="true" class="featured-article">01</span>
-          <header><a href="#">Reviving Retro PCs</a></header>
-          <p>What happens when old PCs are given modern upgrades?</p>
-          <img src="assets/images/image-retro-pcs.jpg" alt="old pcs in an office">
-        </article>
-        <article>
-          <span aria-hidden="true" class="featured-article">02</span>
-          <header><a href="#">Top 10 Laptops of 2022</a></header>
-          <p>Our best picks for various needs and budgets.</p>
-          <img src="assets/images/image-top-laptops.jpg" alt="laptop keyboard with red lights">
-        </article>
-        <article>
-          <span aria-hidden="true" class="featured-article">03</span>
-          <header><a href="#">The Growth of Gaming</a></header>
-          <p>How the pandemic has sparked fresh opportunities.</p>
-          <img src="assets/images/image-gaming-growth.jpg" alt="hand throwing controller up in the air">
-        </article>
-      </section>
-    </main>
-  </div>
+  <header>
+    <h1 class="sr-only">News website</h1>
+    <!-- Whatever is my choice for the company name, since the logo is a W. and I don't know the actual name -->
+    <img src="assets/images/logo.svg" alt="Whatever">
+    <button type="button" class="menu-btn" aria-label="Toggle Menu" aria-expanded="false" id="js-menu-button">
+      <img src="assets/images/icon-menu.svg" alt="" class="menu-open">
+      <img src="assets/images/icon-menu-close.svg" alt="" class="menu-close">
+    </button>
+    <nav role="navigation">
+      <ul role="list">
+        <li role="listitem"><a href="#main">Home</a></li>
+        <li role="listitem"><a href="#new">New</a></li>
+        <li role="listitem"><a href="#popular">Popular</a></li>
+        <li role="listitem"><a href="#">Trending</a></li>
+        <li role="listitem"><a href="#">Categories</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2 id="main" class="sr-only">Main content</h2>
+    <article class="featured">
+      <h3><a href="#">The Bright Future of Web 3.0?</a></h3>
+      <p>
+        We dive into the next evolution of the web that claims to put the power of the platforms back into the hands
+        of
+        the people.
+        But is it really fulfilling its promise?
+      </p>
+      <picture>
+        <source media="(min-width: 40rem)" srcset="assets/images/image-web-3-desktop.jpg">
+        <source media="(max-width: 40rem)" srcset="assets/images/image-web-3-mobile.jpg"> <img
+          src="assets/images/image-web-3-mobile.jpg" alt="modern version of the 'ketnetkroket'">
+      </picture>
+      <a href="#" class="button">Read more</a>
+    </article>
+    <section class="new" id="new" aria-labelledby="new">
+      <h2 id="new">New</h2>
+      <ul>
+        <li>
+          <article>
+            <h3><a href="#">Hydrogen VS Electric Cars</a></h3>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3><a href="#">The Downsides of AI Artistry</a></h3>
+            <p>What are the possible adverse effects of on-demand AI image generation?</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3><a href="#">Is VC Funding Drying Up?</a></h3>
+            <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </article>
+        </li>
+      </ul>
+    </section>
+    <section class="popular" aria-labelledby="popular">
+      <h2 class="sr-only" id="popular">Popular</h2>
+      <ol>
+        <li>
+          <article>
+            <span aria-hidden="true" class="featured-article">01</span>
+            <h3><a href="#">Reviving Retro PCs</a></h3>
+            <p>What happens when old PCs are given modern upgrades?</p>
+            <img src="assets/images/image-retro-pcs.jpg" alt="old pcs in an office">
+          </article>
+        </li>
+        <li>
+          <article>
+            <span aria-hidden="true" class="featured-article">02</span>
+            <h3><a href="#">Top 10 Laptops of 2022</a></h3>
+            <p>Our best picks for various needs and budgets.</p>
+            <img src="assets/images/image-top-laptops.jpg" alt="laptop keyboard with red lights">
+          </article>
+        </li>
+        <li>
+          <article>
+            <span aria-hidden="true" class="featured-article">03</span>
+            <h3><a href="#">The Growth of Gaming</a></h3>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+            <img src="assets/images/image-gaming-growth.jpg" alt="hand throwing controller up in the air">
+          </article>
+        </li>
+      </ol>
+    </section>
+  </main>
   <script src="script.js"></script>
 </body>
 
