added screenreader-only heading for featured article

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
   </header>
   <main>
-    <h2 id="main" class="sr-only">Main content</h2>
+    <h2 class="sr-only">Featured</h2>
     <article class="featured">
       <h3><a href="#">The Bright Future of Web 3.0?</a></h3>
       <p>
@@ -60,7 +60,7 @@
       </picture>
       <a href="#" class="button">Read more</a>
     </article>
-    <section class="new" id="new" aria-labelledby="new">
+    <section class="new" aria-labelledby="new">
       <h2 id="new">New</h2>
       <ul>
         <li>
